[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mgtdisklib"
version = "0.6.0"
description = "Disk manipulation for SAM Coupé and MGT +D disks images"
readme = "ReadMe.md"
license = "MIT"
authors = [
    { name = "Simon Owen", email = "simon@simonowen.com" }
]
keywords = ["mgt", "disk", "sam", "coupe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "bitarray>=2.3.4"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.1",
    "ruff>=0.13.2",
]

[project.urls]
"Homepage" = "https://github.com/simonowen/mgtdisklib"
"Package" = "https://pypi.org/project/mgtdisklib/"

[tool.setuptools.data-files]
"share/doc/mgtdisklib" = ["ReadMe.md"]

[tool.setuptools.packages.find]
include = ["mgtdisklib"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=mgtdisklib --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 115

[tool.ruff.lint]
preview = true # opt into preview rules
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=import sorting
ignore = ["E226", "E265"] # relax some whitespace rules

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"] # line length

[tool.ty.analysis]
allowed-unresolved-imports = ["bitarray"]
